# sycl_ros_gpu_computing

./: README.md
internal_msgs/: CMakeLists.txt  package.xml
internal_msgs/srv/: PointCloud.srv
points_transform/: CMakeLists.txt  package.xml
points_transform/include/points_transform/: sycl_internal.h  transform.hpp
points_transform/src/: sycl_internal.cpp  transform.cpp  transform_client_test.cpp  transform_node.cpp
sycl_internal/: CMakeLists.txt  package.xml
sycl_internal/src/: sycl_internal.cpp
